bug 1522385: Allow italic font for local ja
Windows XP had an issue where some fonts, such as Japanese fonts, did
not really support variants, and became unreadable on low-resolution
monitors when displaying kanji in bold or italic styles.

http://www.localizingjapan.com/blog/2011/02/27/italics-in-japanese/

Support has improved since then, and any browsers or systems that
had this issue are no longer supported.

--- a/kuma/static/styles/locales/ja.scss
+++ b/kuma/static/styles/locales/ja.scss
@@ -44,14 +44,8 @@ Styles for Japanese
        local('IPA P Gothic');
 }
 
-/* Bug 973171 */
-/* stylelint-disable declaration-no-important */
-* {
-    /* !important required for locale specific override */
-    font-style: normal !important;
-}
-
 /* Bug 1522385 */
+/* stylelint-disable declaration-no-important */
 .syntaxbox {
     var,
     em {
